[package]
name = "arc_console"
version = "0.1.0"
authors = ["Simon Strandgaard <neoneye@gmail.com>"]
edition = "2021"

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
futures-util = { version = "0.3.17", default-features = false, features = ["async-await", "sink", "std"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.11.0", default-features = false, features = ["io-util", "macros",  "time", "sync", "net", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.18", default-features = false, features = ["connect"] }
tide = "0.16"
